--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -10,7 +10,7 @@
 
     <h3>{{subtitle}}</h3>
 
-    <button type="button" class="btn btn-default btn-lg">Alejandro CV Website</button>
+    <button type="button" class="btn btn-default btn-lg" href="https://developer-alejandroguindo.com/">Alejandro CV Website</button>
 
     
 
