--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -9,8 +9,10 @@
     <h1>{{title}}</h1>
 
     <h3>{{subtitle}}</h3>
+    
 
-    <button type="button" class="btn btn-default btn-lg" href="https://developer-alejandroguindo.com/">Alejandro CV Website</button>
+    <a href="https://developer-alejandroguindo.com/" class="btn btn-default btn-lg" role="button">Alejandro CV Website</a>
+    
 
     
 
